@@ -4,6 +4,7 @@ import com.nhnacademy.boostorecoupon.dto.coupon.*;
 import com.nhnacademy.boostorecoupon.entity.Coupon;
 import com.nhnacademy.boostorecoupon.entity.CouponHistory;
 import com.nhnacademy.boostorecoupon.entity.CouponPolicy;
+import com.nhnacademy.boostorecoupon.enums.SaleType;
 import com.nhnacademy.boostorecoupon.enums.Status;
 import com.nhnacademy.boostorecoupon.error.CouponException;
 import com.nhnacademy.boostorecoupon.error.NotFoundCouponException;
@@ -12,6 +13,7 @@ import com.nhnacademy.boostorecoupon.repository.CouponHistoryRepository;
 import com.nhnacademy.boostorecoupon.repository.CouponPolicyRepository;
 import com.nhnacademy.boostorecoupon.repository.CouponRepository;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -23,13 +25,13 @@ import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 
+import java.math.BigDecimal;
 import java.time.LocalDateTime;
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
 
@@ -55,14 +57,23 @@ class CouponServiceImplTest {
     @Mock
     private Coupon mockCoupon;
 
-    private LocalDateTime now = LocalDateTime.now();
+    private final LocalDateTime now = LocalDateTime.now();
 
     @BeforeEach
     void setUp() {
         mockHistory = new CouponHistory();
 
         mockPolicy = CouponPolicy.builder()
-                .name("Test Policy")
+                .name("test1")
+                .saleType(SaleType.RATIO)
+                .minimumAmount(new BigDecimal("1000"))
+                .discountLimit(new BigDecimal("10000"))
+                .discountRatio(10)
+                .isStackable(true)
+                .couponScope("ALL")
+                .startDate(now.minusDays(1))
+                .endDate(now.plusDays(10))
+                .couponActive(true)
                 .build();
 
         mockCoupon = new Coupon(
@@ -77,7 +88,7 @@ class CouponServiceImplTest {
     @Test
     void createCoupon() {
         Long policyId = 1L;
-        LocalDateTime expiredAt = LocalDateTime.now().plusDays(5);
+        LocalDateTime expiredAt = now.plusDays(5);
         CouponCreateRequestDto requestDto = new CouponCreateRequestDto(policyId, expiredAt);
 
         when(couponPolicyRepository.findById(policyId)).thenReturn(Optional.of(mockPolicy));
@@ -94,7 +105,7 @@ class CouponServiceImplTest {
     @Test
     void createCoupon_ThrowNotFoundPolicyException() {
         Long policyId = 1L;
-        LocalDateTime expiredAt = LocalDateTime.now().plusDays(5);
+        LocalDateTime expiredAt = now.plusDays(5);
         CouponCreateRequestDto requestDto = new CouponCreateRequestDto(policyId, expiredAt);
 
         when(couponPolicyRepository.findById(policyId)).thenReturn(Optional.empty());
@@ -104,8 +115,6 @@ class CouponServiceImplTest {
 
         assertEquals("ID 에 해당하는 CouponPolicy 를 찾을 수 없습니다: " + policyId, exception.getMessage());
         verify(couponPolicyRepository, times(1)).findById(policyId);
-        verify(couponRepository, never()).save(any(Coupon.class));
-
     }
 
     @DisplayName("쿠폰 ID 로 쿠폰정책 찾기")
@@ -138,79 +147,6 @@ class CouponServiceImplTest {
         verify(couponRepository, times(1)).findCouponPolicyByCouponId(couponId);
     }
 
-    @DisplayName("쿠폰코드로 쿠폰조회")
-    @Test
-    void getCouponByCode() {
-        String couponCode = "TEST123456";
-        CouponCodeRequestDto requestDto = new CouponCodeRequestDto(couponCode);
-        when(couponRepository.findByCode(couponCode)).thenReturn(Optional.of(mockCoupon));
-        Coupon coupon = couponService.getCouponByCode(requestDto);
-        assertEquals(mockCoupon.getId(), coupon.getId());
-        assertEquals(mockCoupon.getStatus(), coupon.getStatus());
-        verify(couponRepository, times(1)).findByCode(couponCode);
-    }
-
-    @DisplayName("쿠폰코드로 조회실패할 경우")
-    @Test
-    void getCouponByCode_ThrowNotFoundCouponException() {
-        String couponCode = "fail";
-        CouponCodeRequestDto requestDto = new CouponCodeRequestDto(couponCode);
-
-        when(couponRepository.findByCode(couponCode)).thenReturn(Optional.empty());
-
-        NotFoundCouponException exception = assertThrows(NotFoundCouponException.class,
-                () -> couponService.getCouponByCode(requestDto));
-
-        assertEquals("CODE 에 해당하는 Coupon 을 찾을 수 없습니다: " + couponCode, exception.getMessage());
-        verify(couponRepository, times(1)).findByCode(couponCode);
-    }
-
-    @DisplayName("만료된 쿠폰 조회")
-    @Test
-    void getExpiredCoupons() {
-        LocalDateTime expiredAt = LocalDateTime.now();
-        int page = 0, size = 10;
-        Pageable pageable = PageRequest.of(page, size);
-        CouponExpiredRequestDto requestDto = new CouponExpiredRequestDto(expiredAt, page, size);
-
-        List<Coupon> expiredCoupons = Arrays.asList(
-                new Coupon(Status.EXPIRED, LocalDateTime.now().minusDays(10), expiredAt.minusDays(5), mockPolicy),
-                new Coupon(Status.EXPIRED, LocalDateTime.now().minusDays(20), expiredAt.minusDays(15), mockPolicy)
-        );
-
-        Page<Coupon> mockPage = new PageImpl<>(expiredCoupons, pageable, expiredCoupons.size());
-        when(couponRepository.findByExpiredAtBeforeOrderByExpiredAtAsc(expiredAt, pageable)).thenReturn(mockPage);
-
-        Page<CouponResponseDto> result = couponService.getExpiredCoupons(requestDto);
-
-        assertEquals(2, result.getTotalElements());
-        assertEquals(expiredCoupons.get(0).getStatus(), result.getContent().get(0).status());
-        verify(couponRepository, times(1)).findByExpiredAtBeforeOrderByExpiredAtAsc(expiredAt, pageable);
-    }
-
-    @DisplayName("활성화된 쿠폰 조회")
-    @Test
-    void getActiveCoupons() {
-        now = LocalDateTime.now();
-        int page = 0, size = 10;
-        Pageable pageable = PageRequest.of(page, size);
-        CouponActiveRequestDto requestDto = new CouponActiveRequestDto(now, page, size);
-
-        List<Coupon> activeCoupons = Arrays.asList(
-                new Coupon(Status.UNUSED, now.minusDays(5), now.plusDays(5), mockPolicy),
-                new Coupon(Status.UNUSED, now.minusDays(10), now.plusDays(10), mockPolicy)
-        );
-
-        Page<Coupon> mockPage = new PageImpl<>(activeCoupons, pageable, activeCoupons.size());
-        when(couponRepository.findActiveCoupons(now, pageable)).thenReturn(mockPage);
-
-        Page<CouponResponseDto> result = couponService.getActiveCoupons(requestDto);
-
-        assertEquals(2, result.getTotalElements());
-        assertEquals(activeCoupons.get(0).getStatus(), result.getContent().get(0).status());
-        verify(couponRepository, times(1)).findActiveCoupons(now, pageable);
-    }
-
     @DisplayName("쿠폰정책으로 쿠폰조회")
     @Test
     void getCouponsByPolicy() {
@@ -221,8 +157,8 @@ class CouponServiceImplTest {
         CouponFindCouponPolicyIdRequestDto requestDto = new CouponFindCouponPolicyIdRequestDto(policyId, page, pageSize);
 
         List<Coupon> coupons = List.of(
-                new Coupon(Status.UNUSED, LocalDateTime.now().minusDays(5), LocalDateTime.now().plusDays(5), mockPolicy),
-                new Coupon(Status.UNUSED, LocalDateTime.now().minusDays(10), LocalDateTime.now().plusDays(10), mockPolicy)
+                new Coupon(Status.UNUSED, now.minusDays(5), now.plusDays(5), mockPolicy),
+                new Coupon(Status.UNUSED, now.minusDays(10), now.plusDays(10), mockPolicy)
         );
 
         Page<Coupon> mockPage = new PageImpl<>(coupons, pageable, coupons.size());
@@ -233,7 +169,7 @@ class CouponServiceImplTest {
         Page<CouponResponseDto> result = couponService.getCouponsByPolicy(requestDto);
 
         assertEquals(2, result.getTotalElements());
-        assertEquals(coupons.get(0).getStatus(), result.getContent().get(0).status());
+        assertEquals(Status.UNUSED, result.getContent().getFirst().status());
         verify(couponPolicyRepository, times(1)).findById(policyId);
         verify(couponRepository, times(1)).findByCouponPolicyOrderByIdAsc(mockPolicy, pageable);
     }
@@ -264,8 +200,8 @@ class CouponServiceImplTest {
 
         Status status = Status.UNUSED;
         List<Coupon> coupons = List.of(
-                new Coupon(status, LocalDateTime.now().minusDays(5), LocalDateTime.now().plusDays(5), mockPolicy),
-                new Coupon(status, LocalDateTime.now().minusDays(10), LocalDateTime.now().plusDays(10), mockPolicy)
+                new Coupon(status, now.minusDays(5), now.plusDays(5), mockPolicy),
+                new Coupon(status, now.minusDays(10), now.plusDays(10), mockPolicy)
         );
 
         Page<Coupon> mockPage = new PageImpl<>(coupons, pageable, coupons.size());
@@ -282,7 +218,7 @@ class CouponServiceImplTest {
     @DisplayName("만료된 쿠폰들의 상태 업데이트")
     @Test
     void updateExpiredCoupon() {
-        LocalDateTime expiredDate = LocalDateTime.now().minusDays(1);
+        LocalDateTime expiredDate = now.minusDays(1);
         String status = "UNUSED";
         int page = 0;
         int size = 5;
@@ -290,33 +226,19 @@ class CouponServiceImplTest {
 
         CouponUpdateExpiredRequestDto requestDto = new CouponUpdateExpiredRequestDto(expiredDate, status, page, size);
 
-        Coupon mockCoupon1 = new Coupon(Status.UNUSED, LocalDateTime.now().minusDays(10), expiredDate.minusDays(5), mockPolicy);
-        Coupon mockCoupon2 = new Coupon(Status.UNUSED, LocalDateTime.now().minusDays(15), expiredDate.minusDays(10), mockPolicy);
+        Coupon mockCoupon1 = new Coupon(Status.UNUSED, now.minusDays(10), expiredDate.minusDays(5), mockPolicy);
+        Coupon mockCoupon2 = new Coupon(Status.UNUSED, now.minusDays(15), expiredDate.minusDays(10), mockPolicy);
 
         List<Coupon> couponList = List.of(mockCoupon1, mockCoupon2);
         Page<Coupon> mockPage = new PageImpl<>(couponList, pageable, couponList.size());
 
-        when(couponRepository.findByExpiredAtBeforeAndStatusOrderByExpiredAtAsc(expiredDate, Status.UNUSED, pageable))
-                .thenReturn(mockPage);
+        when(couponRepository.findByExpiredAtBeforeAndStatusOrderByExpiredAtAsc(expiredDate, Status.UNUSED, pageable)).thenReturn(mockPage);
         couponService.updateExpiredCoupon(requestDto);
 
-        verify(couponRepository, times(1))
-                .findByExpiredAtBeforeAndStatusOrderByExpiredAtAsc(expiredDate, Status.UNUSED, pageable);
+        verify(couponRepository, times(1)).findByExpiredAtBeforeAndStatusOrderByExpiredAtAsc(expiredDate, Status.UNUSED, pageable);
         verify(couponRepository, times(1)).saveAll(couponList);
         verify(couponHistoryRepository, times(1)).saveAll(anyList());
     }
-
-    @DisplayName("만료된 쿠폰들의 상태 업데이트 할때 Status 가 null 일 경우")
-    @Test
-    void updateExpiredCoupon_StatusIsNull() {
-        LocalDateTime expiredDate = LocalDateTime.now().minusDays(1);
-        CouponUpdateExpiredRequestDto requestDto = new CouponUpdateExpiredRequestDto(expiredDate, null, 0, 10);
-
-        CouponException exception = assertThrows(CouponException.class,
-                () -> couponService.updateExpiredCoupon(requestDto));
-        assertEquals("입력받은 Status 가 null 입니다", exception.getMessage());
-    }
-
 
     @DisplayName("쿠폰을 사용할 경우")
     @Test
@@ -372,10 +294,108 @@ class CouponServiceImplTest {
         CouponException exception = assertThrows(CouponException.class,
                 () -> couponService.useCoupon(couponId));
 
-        assertEquals("현재 쿠폰 상태: " + Status.EXPIRED, exception.getMessage());
+        assertEquals("현재 쿠폰을 사용할 수 없는 상태입니다: " + Status.EXPIRED, exception.getMessage());
         verify(couponRepository, times(1)).findById(couponId);
         verify(mockCoupon, times(1)).getStatus();
         verifyNoMoreInteractions(mockCoupon);
         verifyNoInteractions(couponHistoryRepository);
+    }
+
+    @DisplayName("모든 쿠폰 조회")
+    @Test
+    void getAllCoupons() {
+        Pageable pageable = PageRequest.of(0, 10);
+        Page<Coupon> couponPage = new PageImpl<>(Collections.singletonList(mockCoupon));
+
+        when(couponRepository.findAll(pageable)).thenReturn(couponPage);
+
+        Page<CouponResponseDto> result = couponService.getAllCoupons(pageable);
+
+        assertEquals(1, result.getTotalElements());
+        assertEquals(Status.UNUSED, result.getContent().getFirst().status());
+        verify(couponRepository, times(1)).findAll(pageable);
+    }
+
+    @DisplayName("쿠폰 ID로 쿠폰 조회")
+    @Test
+    void getCouponById_Success() {
+        Long couponId = 1L;
+
+        when(couponRepository.findCouponById(couponId)).thenReturn(Optional.of(mockCoupon));
+
+        Coupon result = couponService.getCouponById(couponId);
+
+        assertEquals(Status.UNUSED, result.getStatus());
+        verify(couponRepository, times(1)).findCouponById(couponId);
+    }
+
+    @DisplayName("쿠폰 ID로 쿠폰 조회 실패")
+    @Test
+    void getCouponById_NotFound() {
+        Long couponId = 1L;
+
+        when(couponRepository.findCouponById(couponId)).thenReturn(Optional.empty());
+
+        NotFoundCouponException exception = assertThrows(NotFoundCouponException.class, () -> couponService.getCouponById(couponId));
+
+        assertEquals("ID 에 해당하는 Coupon 를 찾을 수 없습니다: " + couponId, exception.getMessage());
+        verify(couponRepository, times(1)).findCouponById(couponId);
+    }
+
+    @DisplayName("쿠폰 ID로 쿠폰 Response 조회")
+    @Test
+    void findCouponById() {
+        Long couponId = 1L;
+
+        when(couponRepository.findCouponById(couponId)).thenReturn(Optional.of(mockCoupon));
+
+        CouponResponseDto result = couponService.findCouponById(couponId);
+
+        assertEquals(Status.UNUSED, result.status());
+        verify(couponRepository, times(1)).findCouponById(couponId);
+    }
+
+    @DisplayName("쿠폰정책 ID로 쿠폰 조회")
+    @Test
+    void getCouponsByPolicyId() {
+        Long policyId = 1L;
+        int page = 0;
+        int pageSize = 10;
+        Pageable pageable = PageRequest.of(page, pageSize);
+        CouponFindCouponPolicyIdRequestDto requestDto = new CouponFindCouponPolicyIdRequestDto(policyId, page, pageSize);
+
+        Page<Coupon> couponPage = new PageImpl<>(Collections.singletonList(mockCoupon));
+        when(couponRepository.findByCouponPolicy_Id(policyId, pageable)).thenReturn(couponPage);
+
+        Page<Coupon> result = couponService.getCouponsByPolicyId(requestDto);
+
+        assertEquals(1, result.getTotalElements());
+        verify(couponRepository, times(1)).findByCouponPolicy_Id(policyId, pageable);
+    }
+
+    @DisplayName("쿠폰 존재 여부 확인")
+    @Test
+    void existsById() {
+        Long couponId = 1L;
+
+        when(couponRepository.existsById(couponId)).thenReturn(true);
+
+        boolean exists = couponService.existsById(couponId);
+
+        assertTrue(exists);
+        verify(couponRepository, times(1)).existsById(couponId);
+    }
+
+    @DisplayName("쿠폰 존재하지 않음")
+    @Test
+    void existsById_NotExists() {
+        Long couponId = 1L;
+
+        when(couponRepository.existsById(couponId)).thenReturn(false);
+
+        boolean exists = couponService.existsById(couponId);
+
+        assertFalse(exists);
+        verify(couponRepository, times(1)).existsById(couponId);
     }
 }
